--- a/src/Miki/Languages/eng.resx
+++ b/src/Miki/Languages/eng.resx
@@ -2283,4 +2283,7 @@ To read more about the miki scripting language. Check out https://github.com/mik
   <data name="error_permissions_invalid" xml:space="preserve">
     <value>You cannot alter a command you do not have permissions for yourself!</value>
   </data>
+  <data name="error_key_format_invalid" xml:space="preserve">
+    <value>That does not look like a key to me, are you sure you copied it correctly?</value>
+  </data>
 </root>
