--- a/src/Miki/Languages/eng.resx
+++ b/src/Miki/Languages/eng.resx
@@ -531,7 +531,7 @@ Fuzzy</comment>
     <comment>Please do not change "pasta new", do change &lt;keyword&gt; stuff</comment>
   </data>
   <data name="miki_module_fun_8ball_result" xml:space="preserve">
-    <value>🎱 {0}, your question has been answered `{1}`</value>
+    <value>{0}, your question has been answered {1}</value>
   </data>
   <data name="miki_module_fun_image_error_no_image_found" xml:space="preserve">
     <value>No images found on your search :(</value>
