Refactor pasta module
+ Introduce PastaService to Miki
+ pasta tests (todo: add more tests)
+ basic authorization

- EFCore usage in module

--- a/src/Miki/Languages/eng.resx
+++ b/src/Miki/Languages/eng.resx
@@ -2302,4 +2302,7 @@ To read more about the miki scripting language. Check out https://github.com/mik
   <data name="error_daily_claimed" xml:space="preserve">
     <value>You already claimed your daily today! Please wait another {0} before using it again.</value>
   </data>
+  <data name="error_action_unauthorized" xml:space="preserve">
+    <value>You cannot {0} this!</value>
+  </data>
 </root>
